--- a/style.css
+++ b/style.css
@@ -32,11 +32,12 @@ body {
     padding: 10px 0px;
 }
 
+/*
 .contact .btn {
     float: right;
     margin-right: -15px;
     margin-top: -10px;
-}
+}*/
 
 .contact input {
     margin: 5px 0px;
